subpar gui addition

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.FileTools.jar}:\
-    ${reference.ObjectUtils.jar}
+    ${reference.ObjectUtils.jar}:\
+    ${reference.BedUtils.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,8 +63,10 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.BedUtils=../BedUtils
 project.FileTools=../FileTools
 project.ObjectUtils=../ObjectUtils
+reference.BedUtils.jar=${project.BedUtils}/nbdist/BedUtils.jar
 reference.FileTools.jar=${project.FileTools}/dist/FileTools.jar
 reference.ObjectUtils.jar=${project.ObjectUtils}/dist/ObjectUtils.jar
 run.classpath=\
